# Admission-Point-Score-APS-Calculator

./: README.md
APS_SCORE_CALCULATOR_APP/: CMakeLists.txt  dialog.cpp  dialog.ui
